fixed progress bars on firefox

--- a/css/bar.css
+++ b/css/bar.css
@@ -3,6 +3,7 @@ progress {
 	/* Dimensions */
 	width: 300px;
 	height: 20px;
+	border: 0px;
 }
 
 /* Polyfill */
